--- a/Quiz2/appsettings.json
+++ b/Quiz2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Quiz2-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Quiz2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
